--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,22 @@
     android:background="@drawable/background"
     tools:context=".RegisterActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/registerIdName"
+        android:layout_marginBottom="-90dp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/aldrich"
+        android:textAlignment="center"
+        android:textSize="48sp"
+        android:id="@+id/regisztrációsSzalagcim"
+        android:text="@string/regiSzalagcim"
+        android:textStyle="bold"
+
+        >
+    </TextView>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
