Menüpontok létrehozása a login után, egyedi téma integrálása a navbar miatt

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,6 +47,7 @@
         android:layout_marginEnd="28dp"
         android:layout_marginTop="180dp"
         android:hint="@string/hintUsername"
+        android:fontFamily="@font/aldrich"
         style="@style/Widget.Design.TextInputLayout"
         android:padding="5dp"
         android:textColorHint="@color/white"
@@ -75,6 +76,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="28dp"
         android:hint="@string/registerHintPassw"
+        android:fontFamily="@font/aldrich"
         android:padding="5dp"
         android:textColorHint="@color/white"
         app:hintTextColor="@color/white"
