--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,6 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="Theme.Codojo.2" parent="Theme.AppCompat.Light.DarkActionBar" />
     <style name="Theme.Codojo" parent="Base.Theme.Codojo" />
 </resources>
