--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,21 +10,41 @@
     tools:context=".MainActivity"
     tools:ignore="HardcodedText">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="128dp"
-            android:gravity="center"
             android:fontFamily="@font/aldrich"
-            android:textColor="@color/white"
+            android:gravity="center"
             android:text="Codojo"
-            android:textSize="50sp" />
+            android:textColor="@color/white"
+            android:textSize="60sp" />
 
-    </LinearLayout>
+        <TextView
+            android:layout_width="285dp"
+            android:layout_height="220dp"
+            android:layout_below="@+id/textView"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="245dp"
+            android:fontFamily="@font/aldrich"
+            android:textStyle="italic"
+            android:gravity="center"
+            android:text="Üdv a programozás csodálatos világában! Ismerd meg a kódolás titkait és lépj be egy olyan világba, ahol csak a képzelet szab határt!"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+
+    </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
