--- a/app/src/main/res/layout/activity_java_course01_variables.xml
+++ b/app/src/main/res/layout/activity_java_course01_variables.xml
@@ -1,9 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".JavaCourse_01_VariablesActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/variablesJava01"
+                android:text="@string/variables01"
+                android:layout_marginTop="10sp"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/variablesJava01"
+                android:layout_marginStart="30sp"
+                android:layout_marginEnd="30sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/introToVariables"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_11">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/introToVariables"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/TwoType"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_12">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/TwoType"
+                android:layout_marginStart="60sp"
+                android:layout_marginEnd="60sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/felsorolas01"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_13">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas01"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas02"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_14">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas02"
+                android:layout_marginStart="30sp"
+                android:layout_marginEnd="30sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas03"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_15">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas03"
+                android:layout_marginStart="30sp"
+                android:layout_marginEnd="30sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas04"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_16">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas04"
+                android:layout_marginStart="35sp"
+                android:layout_marginEnd="35sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/RefVariable"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_17">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/RefVariable"
+                android:layout_marginStart="30sp"
+                android:layout_marginEnd="30sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/felsorolas05"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_18">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas05"
+                android:layout_marginStart="35sp"
+                android:layout_marginEnd="35sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas06"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_19">
+            </TextView>
+        </RelativeLayout>
+    </ScrollView>
+</RelativeLayout>
