--- a/app/src/main/res/layout/activity_java_course01_variables.xml
+++ b/app/src/main/res/layout/activity_java_course01_variables.xml
@@ -150,6 +150,88 @@
                 android:textAlignment="center"
                 android:text="@string/TV_19">
             </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas06"
+                android:layout_marginStart="35sp"
+                android:layout_marginEnd="35sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/declarationVariables"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/inic">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/declarationVariables"
+                android:layout_marginStart="35sp"
+                android:layout_marginEnd="35sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/declarationVariables01"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_20">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/declarationVariables01"
+                android:layout_marginStart="35sp"
+                android:layout_marginEnd="35sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/inicVariables01"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_21">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/inicVariables01"
+                android:layout_marginStart="35sp"
+                android:layout_marginEnd="35sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/inicVariables02"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/age">
+            </TextView>
+            <Button
+                android:id="@+id/btnBackJavaCourseList01"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/inicVariables02"
+                android:layout_marginStart="40sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginEnd="250sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/backToJavaCourseList"
+                android:textColor="@color/white"
+                app:icon="?attr/actionModeCloseDrawable"/>
+
+            <Button
+                android:id="@+id/btnNextCourseJava01Quiz"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/inicVariables02"
+                android:layout_marginStart="200sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginEnd="40sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/quizVariables"
+                android:textColor="@color/white"
+                app:icon="@drawable/iconnext" />
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
