Változókhoz a kvíz készen van

--- a/app/src/main/res/layout/activity_java_course01_variables.xml
+++ b/app/src/main/res/layout/activity_java_course01_variables.xml
@@ -221,7 +221,7 @@
                 app:icon="?attr/actionModeCloseDrawable"/>
 
             <Button
-                android:id="@+id/btnNextCourseJava01Quiz"
+                android:id="@+id/btnNextCourseJava01"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/inicVariables02"
