--- a/app/src/main/res/layout/activity_java_course02_variables_quiz.xml
+++ b/app/src/main/res/layout/activity_java_course02_variables_quiz.xml
@@ -1,9 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".JavaCourse_02_VariablesQuizActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/nrOneQuiz"
+        android:fontFamily="@font/aldrich"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:layout_marginTop="60sp"
+        android:id="@+id/variablesQuizNr1"
+        >
+    </TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/variablesQuizNr1"
+        android:text="@string/question"
+        android:fontFamily="@font/aldrich"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:layout_marginTop="70sp"
+        android:id="@+id/questionVariables"
+        >
+    </TextView>
+
+    <Button
+        android:id="@+id/valasz01Variables"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_below="@id/questionVariables"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/aldrich"
+        android:text="@string/firstOptionVar"
+        android:textAllCaps="false"
+        android:textSize="18sp" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/valasz01Variables"
+        android:id="@+id/valasz02Variables"
+        android:text="@string/secondOptionVar"
+        android:fontFamily="@font/aldrich"
+        android:textSize="18sp"
+        android:textAllCaps="false"
+        >
+    </Button>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/valasz02Variables"
+        android:id="@+id/valasz03Variables"
+        android:text="@string/thirdOptionVar"
+        android:fontFamily="@font/aldrich"
+        android:textSize="18sp"
+        android:textAllCaps="false"
+        >
+    </Button>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/valasz03Variables"
+        android:id="@+id/valasz04Variables"
+        android:text="@string/fourthOptionVar"
+        android:fontFamily="@font/aldrich"
+        android:textSize="18sp"
+        android:textAllCaps="false"
+        android:layout_marginBottom="30dp"
+        >
+    </Button>
+
+</RelativeLayout>
