Vissza gomb integrálása a kvízhez

--- a/app/src/main/res/layout/activity_java_course02_variables_quiz.xml
+++ b/app/src/main/res/layout/activity_java_course02_variables_quiz.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +16,7 @@
         android:textStyle="bold"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:layout_marginTop="60sp"
+        android:layout_marginTop="40sp"
         android:id="@+id/variablesQuizNr1"
         >
     </TextView>
@@ -29,7 +30,7 @@
         android:textStyle="bold"
         android:textAlignment="center"
         android:textSize="24sp"
-        android:layout_marginTop="70sp"
+        android:layout_marginTop="50sp"
         android:id="@+id/questionVariables"
         >
     </TextView>
@@ -85,5 +86,17 @@
         android:layout_marginBottom="30dp"
         >
     </Button>
+
+    <Button
+        android:id="@+id/backToJavaList"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_below="@+id/valasz04Variables"
+        android:layout_marginStart="145dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/aldrich"
+        android:text="@string/back"
+        android:textColor="@color/white"
+        app:icon="?attr/homeAsUpIndicator" />
 
 </RelativeLayout>
