--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -36,7 +36,7 @@
         android:textSize="30sp" />
 
     <Button
-        android:id="@+id/btnCourseCSharp"
+        android:id="@+id/btnCoursePython"
         android:layout_width="300sp"
         android:layout_height="120sp"
         android:layout_below="@id/courseChoose"
@@ -45,7 +45,7 @@
         android:layout_marginEnd="20sp"
         android:background="#CC651FFF"
         android:fontFamily="@font/aldrich"
-        android:text="@string/CSharpC"
+        android:text="@string/python"
         android:textColor="@color/white"
         android:textSize="30sp" />
 
