--- a/app/src/main/res/layout/activity_java_course02_variables_quiz.xml
+++ b/app/src/main/res/layout/activity_java_course02_variables_quiz.xml
@@ -35,63 +35,62 @@
         >
     </TextView>
 
-    <Button
-        android:id="@+id/valasz01Variables"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_below="@id/questionVariables"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/aldrich"
-        android:text="@string/firstOptionVar"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/valasz01Variables"
-        android:id="@+id/valasz02Variables"
-        android:text="@string/secondOptionVar"
-        android:fontFamily="@font/aldrich"
-        android:textSize="18sp"
-        android:textAllCaps="false"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/relativeVariables"
+        android:layout_below="@+id/questionVariables"
         >
-    </Button>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/valasz02Variables"
-        android:id="@+id/valasz03Variables"
-        android:text="@string/thirdOptionVar"
-        android:fontFamily="@font/aldrich"
-        android:textSize="18sp"
-        android:textAllCaps="false"
-        >
-    </Button>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/valasz03Variables"
-        android:id="@+id/valasz04Variables"
-        android:text="@string/fourthOptionVar"
-        android:fontFamily="@font/aldrich"
-        android:textSize="18sp"
-        android:textAllCaps="false"
-        android:layout_marginBottom="30dp"
-        >
-    </Button>
+        <Button
+            android:id="@+id/valasz01Variables"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/aldrich"
+            android:text="@string/firstOptionVar"
+            android:textAllCaps="false"
+            android:textSize="18sp" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="80dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/valasz02Variables"
+            android:text="@string/secondOptionVar"
+            android:fontFamily="@font/aldrich"
+            android:textSize="18sp"
+            android:textAllCaps="false"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="130dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/valasz03Variables"
+            android:text="@string/thirdOptionVar"
+            android:fontFamily="@font/aldrich"
+            android:textSize="18sp"
+            android:textAllCaps="false" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="180dp"
+            android:id="@+id/valasz04Variables"
+            android:text="@string/fourthOptionVar"
+            android:fontFamily="@font/aldrich"
+            android:textSize="18sp"
+            android:textAllCaps="false"
+            android:layout_marginBottom="30dp"/>
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/backToJavaList"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_below="@+id/valasz04Variables"
+        android:layout_below="@+id/relativeVariables"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="145dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/aldrich"
@@ -102,6 +101,7 @@
     <Button
         android:id="@+id/nextToOperators"
         android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_height="50dp"
         android:layout_below="@+id/backToJavaList"
         android:layout_marginStart="125dp"
