--- a/app/src/main/res/layout/activity_java_course06_loops_quiz.xml
+++ b/app/src/main/res/layout/activity_java_course06_loops_quiz.xml
@@ -33,66 +33,67 @@
         android:id="@+id/questionVariables03"
         >
     </TextView>
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/questionVariables03"
+    android:id="@+id/relativeOptions">
     <Button
         android:id="@+id/valasz01Variables03"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_below="@id/questionVariables03"
-        android:layout_marginStart="130dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/aldrich"
         android:text="@string/firstOptionVar"
         android:textAllCaps="false"
         android:textSize="18sp" />
+
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/valasz01Variables03"
         android:id="@+id/valasz02Variables03"
-        android:text="@string/secondOptionVar"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
         android:fontFamily="@font/aldrich"
-        android:textSize="18sp"
+        android:text="@string/secondOptionVar"
         android:textAllCaps="false"
-        >
-    </Button>
+        android:textSize="18sp" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/valasz02Variables03"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="130dp"
         android:id="@+id/valasz03Variables03"
         android:text="@string/thirdOptionVar"
         android:fontFamily="@font/aldrich"
         android:textSize="18sp"
         android:textAllCaps="false"
-        >
-    </Button>
+        />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/valasz03Variables03"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="180dp"
         android:id="@+id/valasz04Variables03"
         android:text="@string/fourthOptionVar"
         android:fontFamily="@font/aldrich"
         android:textSize="18sp"
         android:textAllCaps="false"
         android:layout_marginBottom="30dp"
-        >
-    </Button>
+        />
+
+</RelativeLayout>
 
     <Button
         android:id="@+id/backToJavaList05"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_below="@+id/valasz04Variables03"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="145dp"
         android:layout_marginTop="10dp"
+        android:layout_below="@id/relativeOptions"
         android:fontFamily="@font/aldrich"
         android:text="@string/back"
         android:textColor="@color/white"
@@ -102,6 +103,7 @@
         android:id="@+id/nextToArrays"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/backToJavaList05"
         android:layout_marginStart="140dp"
         android:layout_marginTop="5dp"
